# twitterbot

./: default.nix  hie.yaml  release.nix  shell.nix  twitter-types.nix  twitterbot.cabal  twitterbot.nix
config/: access-config-type.dhall  auth-config-type.dhall  consumer-config-type.dhall  dhall-bot-config-type.dhall  phrases.dhall  triggered-phrases-config-type.dhall  twitterbot-config-type.dhall  twitterbot.dhall
src/: Main.hs  Types.hs
